<?xml version="1.0" encoding="utf-8"?>

<!-- Grow With Google Challenge Scholarship: Android Basics
     Project: 3
     Version: 2.0
     App Name: Quizzy - the Kiwi Kwiz
     Author: Joseph McDonald -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_main"
    tools:context="com.example.android.kiwikwiz.SummaryActivity">

    <LinearLayout
        style="@style/header_standard"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/banner_summary"
            style="@style/banner_summary" />

        <Button
            android:id="@+id/button_share"
            style="@style/button_share"
            android:contentDescription="@string/button_share" />

    </LinearLayout>

    <View style="@style/view_divider_horizontal" />

    <ImageView
        android:id="@+id/image_summary"
        style="@style/image_summary"
        android:contentDescription="@string/image_kiwi_yay"
        android:src="@drawable/kiwi_yay" />

    <ScrollView
        android:id="@+id/answers_summary"
        style="@style/layout_scrollview"
        android:visibility="gone">

        <LinearLayout style="@style/layout_linear_vertical">

            <TextView
                android:id="@+id/question_summary_kiwi"
                style="@style/text_standard"
                android:text="@string/question_kiwi" />

            <TextView
                android:id="@+id/answer_summary_kiwi"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_kiwi" />

            <ImageView
                android:id="@+id/imageview_answer_kiwi_bird"
                style="@style/image_standard"
                android:contentDescription="@string/image_kiwi_bird"
                android:src="@drawable/kiwi_bird" />

            <ImageView
                android:id="@+id/image_view_answer_kiwi_fruit"
                style="@style/image_standard"
                android:contentDescription="@string/image_kiwi_fruit"
                android:src="@drawable/kiwi_fruit" />

            <ImageView
                android:id="@+id/image_view_answer_kiwi_peeps"
                style="@style/image_standard"
                android:contentDescription="@string/image_kiwi_peeps"
                android:src="@drawable/kiwi_peeps" />

            <ImageView
                android:id="@+id/image_view_answer_kiwi_money"
                style="@style/image_standard"
                android:contentDescription="@string/image_kiwi_money"
                android:src="@drawable/kiwi_money" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/standard_16dp" />

            <TextView
                android:id="@+id/question_summary_populous"
                style="@style/text_standard"
                android:text="@string/question_nz_populous" />

            <TextView
                android:id="@+id/answer_summary_populous"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_nz_populous" />

            <ImageView
                android:id="@+id/image_view_answer_populous"
                style="@style/image_standard"
                android:contentDescription="@string/image_auckland"
                android:src="@drawable/auckland" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/standard_16dp" />

            <TextView
                android:id="@+id/question_summary_haka"
                style="@style/text_standard"
                android:text="@string/question_haka" />

            <TextView
                android:id="@+id/answer_summary_haka"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_haka" />

            <ImageView
                android:id="@+id/image_view_answer_haka"
                style="@style/image_standard"
                android:contentDescription="@string/image_haka"
                android:src="@drawable/haka" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/standard_16dp" />

            <TextView
                android:id="@+id/question_summary_capital"
                style="@style/text_standard"
                android:text="@string/question_nz_capital" />

            <TextView
                android:id="@+id/answer_summary_capital"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_nz_capital" />

            <ImageView
                android:id="@+id/image_view_answer_capital"
                style="@style/image_standard"
                android:contentDescription="@string/image_wellington"
                android:src="@drawable/wellington" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/standard_16dp" />

            <TextView
                android:id="@+id/question_summary_cricket"
                style="@style/text_standard"
                android:text="@string/question_nz_cricket" />

            <TextView
                android:id="@+id/answer_summary_cricket"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_nz_cricket" />

            <ImageView
                android:id="@+id/image_view_answer_cricket"
                style="@style/image_standard"
                android:contentDescription="@string/image_nz_cricket"
                android:src="@drawable/blackcaps" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/standard_16dp" />

            <TextView
                android:id="@+id/question_summary_flag"
                style="@style/text_standard"
                android:text="@string/question_nz_flag" />

            <TextView
                android:id="@+id/answer_summary_flag"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_nz_flag" />

            <ImageView
                android:id="@+id/image_view_answer_flag"
                style="@style/image_standard"
                android:contentDescription="@string/image_nz_flag"
                android:src="@drawable/flag_nz" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginTop="@dimen/standard_16dp" />

            <TextView
                android:id="@+id/question_summary_suffrage"
                style="@style/text_standard"
                android:text="@string/question_nz_suffrage" />

            <TextView
                android:id="@+id/answer_summary_suffrage"
                style="@style/text_standard"
                android:autoLink="web"
                android:text="@string/answer_nz_suffrage" />

            <ImageView
                android:id="@+id/image_view_answer_suffrage"
                style="@style/image_standard"
                android:layout_marginBottom="@dimen/standard_16dp"
                android:contentDescription="@string/image_nz_suffrage"
                android:src="@drawable/suffrage_nz" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:text="@string/button_get_grade" />

</LinearLayout>