<?xml version="1.0" encoding="utf-8"?>

<!-- Grow With Google Challenge Scholarship: Android Basics
     Project: 3
     Version: 2.0
     App Name: Quizzy - the Kiwi Kwiz
     Author: Joseph McDonald -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_main"
    tools:context="com.example.android.kiwikwiz.CapitalCityActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/progress_bar" />

    <ScrollView style="@style/layout_scrollview">

        <LinearLayout style="@style/layout_linear_vertical">

            <TextView
                android:id="@+id/banner_question"
                style="@style/header_standard"
                android:text="@string/question_nz_capital" />

            <View
                style="@style/view_divider_horizontal"
                android:layout_marginBottom="@dimen/standard_16dp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_auckland"
                    style="@style/layout_radio_button_checkbox"
                    android:text="@string/radio_auckland" />

                <RadioButton
                    android:id="@+id/radio_hamilton"
                    style="@style/layout_radio_button_checkbox"
                    android:text="@string/radio_hamilton" />

                <RadioButton
                    android:id="@+id/radio_christchurch"
                    style="@style/layout_radio_button_checkbox"
                    android:text="@string/radio_christchurch" />

                <RadioButton
                    android:id="@+id/radio_wellington"
                    style="@style/layout_radio_button_checkbox"
                    android:text="@string/radio_wellington" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:text="@string/button_next" />

</LinearLayout>
