<?xml version="1.0" encoding="utf-8"?>

<!-- Grow With Google Challenge Scholarship: Android Basics
     Project: 3
     Version: 2.0
     App Name: Quizzy - the Kiwi Kwiz
     Author: Joseph McDonald -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_main"
    tools:context="com.example.android.kiwikwiz.FlagActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/progress_bar" />

    <ScrollView style="@style/layout_scrollview">

        <LinearLayout style="@style/layout_linear_vertical">

            <TextView
                android:id="@+id/banner_question"
                style="@style/header_standard"
                android:text="@string/question_nz_flag" />

            <View style="@style/view_divider_horizontal" />

            <RadioGroup
                android:id="@+id/radio_group"
                style="@style/layout_linear_horizontal">

                <RadioButton
                    android:id="@+id/radio_true"
                    style="@style/layout_radio_button_checkbox"
                    android:layout_weight="1"
                    android:text="@string/radio_true"
                    android:textAllCaps="true" />

                <RadioButton
                    android:id="@+id/radio_false"
                    style="@style/layout_radio_button_checkbox"
                    android:layout_weight="1"
                    android:text="@string/radio_false"
                    android:textAllCaps="true" />

            </RadioGroup>

            <ImageView
                android:id="@+id/image_view_answer_nz_flag"
                style="@style/image_scrollview"
                android:contentDescription="@string/image_australia_flag"
                android:src="@drawable/flag_au" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:text="@string/button_next" />

</LinearLayout>