<?xml version="1.0" encoding="utf-8"?>

<!-- Grow With Google Challenge Scholarship: Android Basics
     Project: 3
     Version: 2.0
     App Name: Quizzy - the Kiwi Kwiz
     Author: Joseph McDonald -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_main"
    tools:context="com.example.android.kiwikwiz.CricketActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/progress_bar" />

    <ScrollView style="@style/layout_scrollview">

        <LinearLayout style="@style/layout_linear_vertical">

            <TextView
                android:id="@+id/banner_question"
                style="@style/header_standard"
                android:text="@string/question_nz_cricket" />

            <View style="@style/view_divider_horizontal" />

            <EditText
                android:id="@+id/attempt_here"
                style="@style/text_standard"
                android:hint="@string/hint_enter_here"
                android:inputType="text" />

            <ImageView
                android:id="@+id/image_view_answer_nz_cricket"
                style="@style/image_scrollview"
                android:contentDescription="@string/image_nz_cricket"
                android:src="@drawable/blackcaps" />

        </LinearLayout>

    </ScrollView>

    <View style="@style/view_divider_horizontal" />

    <Button
        android:id="@+id/button_bottom"
        style="@style/button_bottom"
        android:text="@string/button_next" />

</LinearLayout>